--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
   <div class="rec-top">
-
     <h2 class="recommended-heading ">Professional Experience</h2>
   </div>
 
@@ -23,9 +22,11 @@
 
   <div class="recommended-section">
     <h2 class="recommended-heading">Education & Certifications</h2>
-    <div class="recommended-grid" id="recommended-container">
-    </div>
-
+    <div class="recommended-grid" id="recommended-container"></div>
+  </div>
+    <div class="hobbies-section">
+    <h2 class="recommended-heading">Hobbies</h2>
+    <div class="hobbies-grid" id="hobbies-container"></div>
   </div>
   <footer class="footer">
     <div class="footer-container">
