--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="footer-container">
 
       <p class="copyright">
-        &copy; <span id="current-year"></span> Davion Garcia
+       Developed By Davion Garcia
       </p>
 
       <a href="#top" class="back-to-top">Back to Top</a>
