--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+
+  <div class="rec-top">
+    <h2 class="recommended-heading ">Hi, I'm Davion</h2>
+    <div class="heading">
+      <img src="./media/avatar.png" alt="avatar">
+      <p>
+        My background is built on a foundation of discipline and adaptability, beginning with my seven years of service as a Logistics Coordinator in the U.S. Air Force. After transitioning to the private sector, I've worked in satellite manufacturing at SpaceX and Amazon Project Kuiper. In these roles, I was responsible for leading teams tasked with mechanical and electrical assembly of satellite components and functional testing.
+  I am now pursing my life-long goal of working in the IT sector. To prepare for future roles, I have earned certifications from industry leaders such as AWS, Google, and CompTIA, covering areas like cloud infrastructure, data analytics, networking, and software development. My diverse professional history and proven ability to quickly acquire new technical skills make me well-equipped to tackle complex problems and be a valued contributor in fast-paced dynamic environments.
+      </p>
+    </div>
+  </div>
   <div class="rec-top">
     <h2 class="recommended-heading ">Professional Experience</h2>
   </div>
