--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <div class="heading">
       <img src="./media/avatar.png" alt="avatar">
       <p>
-        My background is built on a foundation of discipline and adaptability, beginning with my seven years of service as a Logistics Coordinator in the U.S. Air Force. After transitioning to the private sector, I've worked in satellite manufacturing at SpaceX and Amazon Project Kuiper. In these roles, I was responsible for leading teams tasked with mechanical and electrical assembly of satellite components and functional testing.
-  I am now pursing my life-long goal of working in the IT sector. To prepare for future roles, I have earned certifications from industry leaders such as AWS, Google, and CompTIA, covering areas like cloud infrastructure, data analytics, networking, and software development. My diverse professional history and proven ability to quickly acquire new technical skills make me well-equipped to tackle complex problems and be a valued contributor in fast-paced dynamic environments.
+        My background is founded on discipline and adaptability, beginning with seven years as a Logistics Coordinator in the U.S. Air Force. After transitioning to the private sector, I gained diverse experience in construction and manufacturing before my most recent roles in satellite manufacturing at SpaceX and Amazon Project Kuiper. In these positions, I led teams responsible for the mechanical and electrical assembly of satellite components and functional testing. </br>I am now pivoting to the IT sector, a long-term career goal. To prepare, I've earned certifications from AWS, Google, and CompTIA, demonstrating a strong grasp of cloud infrastructure, data analytics, networking, and software development. My diverse professional history and proven ability to quickly acquire new technical skills make me well-equipped to tackle complex challenges in fast-paced, dynamic environments.
       </p>
     </div>
   </div>
