--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <div class="heading">
       <img src="./media/avatar.png" alt="avatar">
       <p>
-        My background is built on a foundation of discipline and adaptability, beginning with my seven years of service as a Logistics Coordinator in the U.S. Air Force. After transitioning to the private sector, I've worked in satellite manufacturing at SpaceX and Amazon Project Kuiper. In these roles, I was responsible for leading teams tasked with mechanical and electrical assembly of satellite components and functional testing.
-  I am now pursing my life-long goal of working in the IT sector. To prepare for future roles, I have earned certifications from industry leaders such as AWS, Google, and CompTIA, covering areas like cloud infrastructure, data analytics, networking, and software development. My diverse professional history and proven ability to quickly acquire new technical skills make me well-equipped to tackle complex problems and be a valued contributor in fast-paced dynamic environments.
+        A veteran of the U.S. Air Force specializing in Logistics. I've also had hands-on technical leadership in satellite manufacturing at SpaceX and Amazon Project Kuiper. In these roles, I lead in the mechanical/electrical assembly and functional testing of critical Low Earth Orbit vehicles.<br>
+        I am now honing my skills in the IT sector. I've acquired certifications from AWS, Google, and CompTIA, covering cloud infrastructure, networking, and data analytics. I offer a unique blend of high-stakes operational experience and demonstrated technical aptitude, ready to drive results in a dynamic IT environment.
+
       </p>
     </div>
   </div>
