--- a/index.html
+++ b/index.html
@@ -9,20 +9,29 @@
 </head>
 
 <body>
-
   <div class="rec-top">
     <h2 class="recommended-heading ">Hi, I'm Davion</h2>
     <div class="heading">
       <img src="./media/avatar.png" alt="avatar">
-      <p>
-        A veteran of the U.S. Air Force specializing in Logistics. I've also had hands-on technical leadership in satellite manufacturing at SpaceX and Amazon Project Kuiper. In these roles, I lead in the mechanical/electrical assembly and functional testing of critical Low Earth Orbit vehicles.<br>
-        I am now honing my skills in the IT sector. I've acquired certifications from AWS, Google, and CompTIA, covering cloud infrastructure, networking, and data analytics. I offer a unique blend of high-stakes operational experience and demonstrated technical aptitude, ready to drive results in a dynamic IT environment.
-
-      </p>
+      <ul>
+        <p>Skill Set</p>
+        <li>
+          <P>Network Administration</P>
+        </li>
+        <li>
+          <P>Automation Scripting</P>
+        </li>
+        <li>
+          <P>Software Development</P>
+        </li>
+        <li>
+          <P>Data Analysis</P>
+        </li>
+      </ul>
     </div>
   </div>
-  <div class="rec-top">
-    <h2 class="recommended-heading ">Professional Experience</h2>
+  <div>
+    <h2 class="recommended-heading ">Past Professions</h2>
   </div>
 
   <div class="carousel-container">
@@ -33,7 +42,7 @@
   </div>
 
   <div class="recommended-section">
-    <h2 class="recommended-heading">Education & Certifications</h2>
+    <h2 class="recommended-heading">Education</h2>
     <div class="recommended-grid" id="recommended-container"></div>
   </div>
     <div class="hobbies-section">
