--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
       </ul>
     </div>
   </div>
+  
   <div>
     <h2 class="recommended-heading ">Past Professions</h2>
   </div>
-
-  <div class="carousel-container">
-    <button id="prevBtn" class="carousel-btn left-btn">&lt;</button>
-    <div class="carousel-inner" id="carousel-inner">
-    </div>
-    <button id="nextBtn" class="carousel-btn right-btn">&gt;</button>
+  
+  <div id="carousel-container">
+        <div class="image-slot" data-index="1"></div>
+        <div class="image-slot center" data-index="2"></div>
+        <div class="image-slot" data-index="3"></div>
   </div>
 
-  <div class="recommended-section">
-    <h2 class="recommended-heading">Education</h2>
+  <h2 class="recommended-heading">Education</h2>
+  
     <div class="recommended-grid" id="recommended-container"></div>
-  </div>
+  
     <div class="hobbies-section">
     <h2 class="recommended-heading">Hobbies</h2>
     <div class="hobbies-grid" id="hobbies-container"></div>
