--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <h2 class="recommended-heading">Education</h2>
 
-    <div class="recommended-grid" id="recommended-container"></div>
+    <div class="certs-grid" id="certs-container"></div>
   
     <div class="hobbies-section">
     <h2 class="recommended-heading">Hobbies</h2>
